fixed portfolio images not lining up with overflow shadow boxes

--- a/src/App.css
+++ b/src/App.css
@@ -360,6 +360,7 @@ nav ul li {
 
 .portfolio-image {
   width: 15rem;
+  height: 8rem;
   border: 1px solid var(--primary-orange);
   padding: 0 0.5rem;
 }
